--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@ body
 { background-color: #EAF6F6;}
 
 hr{
-border style:none;
-  border-top-style:dotted;
-border color:grey;
+border style: none;
+border-top-style: dotted;
+border color: grey;
+border width: 5 px;
+width:5%;
 }
