--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@ body
 { background-color: #EAF6F6;}
 
 hr{
-border style: none;
+border-style: none;
 border-top-style: dotted;
-border color: grey;
-border width: 5 px;
+border-color: grey;
+border-width: 5 px;
 width:5%;
 }
